# nanoconf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-publish.yml
nanoconf/: __init__.py  nanoconf.py
tests/: test_nanoconf.py
tests/data/: nested.nconf  simple.nconf
tests/data/animals/: dog.nconf  elephant.nconf  lion.nconf  panda.nconf  penguin.nconf
